@@ -271,6 +271,28 @@ class AdyenTest < Test::Unit::TestCase
     end.respond_with(successful_authorize_response)
   end
 
+  def test_nonfractional_currency_handling_with_amount_modification
+    stub_comms do
+      @gateway.authorize(1, @credit_card, @options.merge(currency: 'JPY'))
+    end.check_request do |endpoint, data, headers|
+      assert_match(/"amount\":{\"value\":\"1\",\"currency\":\"JPY\"}/, data)
+    end.respond_with(successful_authorize_response)
+  end
+
+  def test_nonfractional_currency_handling_without_amount_modification
+    stub_comms do
+      @gateway.authorize(200, @credit_card, @options.merge(currency: 'JPY', opt_out_multiply_amount: true))
+    end.check_request do |endpoint, data, headers|
+      assert_match(/"amount\":{\"value\":\"2\",\"currency\":\"JPY\"}/, data)
+    end.respond_with(successful_authorize_response)
+
+    stub_comms do
+      @gateway.authorize(200, @credit_card, @options.merge(currency: 'CLP'))
+    end.check_request do |endpoint, data, headers|
+      assert_match(/"amount\":{\"value\":\"200\",\"currency\":\"CLP\"}/, data)
+    end.respond_with(successful_authorize_response)
+  end
+
   def test_failed_purchase
     @gateway.expects(:ssl_post).returns(failed_purchase_response)
 
